# geodata

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  meson.build
.github/workflows/: codeql.yml
include/: GeoCoordinate.hpp  GeoJson.hpp  GeoJsonSimplifyHandler.hpp  MapProjection.hpp  Spoon.hpp  Weather.hpp  WebMapService.hpp  meson.build
src/: DeutscherWetterDienst.cpp  DeutscherWetterDienst.hpp  EumetSat.cpp  EumetSat.hpp  GeoCoordinate.cpp  GeoCoordinate.hpp  GeoJson.cpp  GeoJson.hpp  GeoJsonSimplifyHandler.cpp  GeoJsonSimplifyHandler.hpp  LocaleContext.cpp  LocaleContext.hpp  Makefile.am  MapProjection.cpp  MapProjection.hpp  RealEarth.cpp  RealEarth.hpp  Spoon.cpp  Spoon.hpp  Weather.cpp  Weather.hpp  WebMapService.cpp  WebMapService.hpp  geodata-0.1.2.pc  geodata-0.1.2.pc.in  geodata.pc.in  meson.build
test/: Makefile.am  geo_test.cpp  meson.build
